--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -235,6 +235,10 @@ span.radio.inline {
     border-bottom: 2px solid #ec6952;
     padding-left: 10px;
   }
+  li {
+    font-size: 18px;
+    margin: 5px 0px;
+  }
 }
 
 .item .content p {
