--- a/app/views/user_mailer/new_submission_reply.html.erb
+++ b/app/views/user_mailer/new_submission_reply.html.erb
@@ -4,7 +4,17 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-  	<p>New reply at <%= submission_submission_comment_url(@forum, @post) %></p>
+    <p>
+      You've got a new reply on one of your submissions!
+    </p>
+  	<p>View it <%= link_to 'here!', submission_submission_comment_url(@forum, @post) %></p>
+
+    <p>
+      Happy coding!
+    </p>
+    <p>
+      -TECHRISE Team
+    </p>
   </body>
 
   </html>
