--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require RRSSB
  *= require_self
  *= require_tree .
+ *= stub "foundation"
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
