--- a/app/views/public_activity/flashcard/_complete.html.erb
+++ b/app/views/public_activity/flashcard/_complete.html.erb
@@ -1,4 +1,5 @@
 <% display_name = "You" %>
+<% owner = User.find(activity.owner_id) %>
 
 <!-- for later use <% activity_user_name = User.find(activity.owner_id).name %> -->
 
@@ -9,7 +10,7 @@
 
   <div class="col-xs-11">
     <span class="activity_time"><small><%= time_ago_in_words(activity.created_at) %> ago</small></span><br>
-    <strong><%= display_name %> completed a flashcard</strong><br>
-    <%= image_tag User.find(activity.owner_id).avatar, class: 'prof_pic_xs' %><span class="activity_description"></span>
+    <strong><%= owner.name %> completed a flashcard</strong><br>
+    <%= image_tag owner.avatar, class: 'prof_pic_xs' %><span class="activity_description"></span>
   </div>
 </div>
