--- a/app/views/public_activity/progression/_create.html.erb
+++ b/app/views/public_activity/progression/_create.html.erb
@@ -1,8 +1,10 @@
 <% lesson = activity.parameters[:course_name].split(/(?=[A-Z])/) %>
 <% lesson_name = lesson.join(" ").chomp("Lesson") %>
-<% display_name = "You" %>
-
+<% activity_user_name = User.find(activity.owner_id).name %>
+<!-- <% display_name = "You" %> -->
 <!-- for later use <% activity_user_name = User.find(activity.owner_id).name %> -->
+
+<% owner = User.find(activity.owner_id) %>
 
 <div class="row">
   <div class="col-xs-1">
@@ -11,7 +13,7 @@
 
   <div class="col-xs-11">
     <span class="activity_time"><small><%= time_ago_in_words(activity.created_at) %> ago</small></span><br>
-    <strong><%= display_name %> completed a lesson</strong><br>
-    <%= image_tag User.find(activity.owner_id).avatar, class: 'prof_pic_xs' %><span class="activity_description">Lesson <%= activity.parameters[:lesson_id] %> in <%= lesson_name %></span>
+    <strong><%= owner.name %> completed a lesson</strong><br>
+    <%= image_tag owner.avatar, class: 'prof_pic_xs' %><span class="activity_description">Lesson <%= activity.parameters[:lesson_id] %> in <%= lesson_name %></span>
   </div>
 </div>
