--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -64,7 +64,7 @@
                                         <table>
                                           <tr>
                                             <th class="menu-item float-center"><a href="http://www.techrise.me">TECHRISE</a></th>
-                                            <th class="menu-item float-center"><a href="hhttps://www.facebook.com/TECHRISE-200095187051747/?fref=ts">Facebook</a></th>
+                                            <th class="menu-item float-center"><a href="https://www.facebook.com/techrisenepal">Facebook</a></th>
                                             <th class="menu-item float-center"><a href="https://www.linkedin.com/company/techrise">LinkedIn</a></th>
                                           </tr>
                                         </table>
