add new ideator video

--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -70,7 +70,7 @@
 
 	<%= render partial: 'course', locals: {course: 'Ideator - An idea sharing app', course_name: 'Create your first Ruby on Rails application. You\'ll be building an idea sharing/discovery app where anyone can post their ideas and share them with the world.', available: true, course_link: ideator_path, course_access: 'ideator', controller_name: 'IdeatorLesson'} %>
 
-	<%= render partial: 'course', locals: {course: 'MVC and REST', course_name: '', available: false, course_link: mvc_path, course_access: 'mvc', controller_name: 'MvcLesson'} %>
+	<%= render partial: 'course', locals: {course: 'MVC and REST', course_name: '', available: true, course_link: mvc_path, course_access: 'mvc', controller_name: 'MvcLesson'} %>
 
 
 </div>
