--- a/app/views/ideator_lessons/lessons/lesson_22.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_22.html.erb
@@ -1,5 +1,10 @@
 <h1><%= title_for(IdeatorLesson, 7, 3) %></h1>
 
+<!-- 16:9 aspect ratio -->
+<div class="embed-responsive embed-responsive-16by9 embed_video">
+  <iframe src="https://player.vimeo.com/video/174306507" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
+
 <p>
   Congratulations! You've completed your first Ruby on Rails application! You've successfully created an app from scratch and you kind of understand how these apps are built now.
 </p>
