--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,35 +1,49 @@
-<%= back_to_lesson %>
+<div class="devise_box forum_container">
 
-<h3>Guidelines</h3>
-<ul class = "unindented_ul">
+	<% flash.each do |message_type, message| %>
+	  <% if message_type == "notice" %>
+	    <p class="alert alert-info alert-dismissible text-center"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><%= notice %></p>
+	  <% elsif message_type == "alert" %>
+	    <p class="alert alert-danger alert-dismissible text-center"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><%= alert %></p>
+	  <% else %>
+	    <div class="alert alert-<%= message_type %> alert-dismissible text-center"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><%= message %></div>
+	  <% end %>
+	<% end %>
 
-	<li>Google your question first</li>
-	<p>
-		Becoming a great googler and getting your own answers is an essential skill to become a competent developer. Google is smarter than anyone, ask it first, and if you still don't understand, seek for assistance.</p>
-	</p>
+	<%= back_to_lesson %>
 
-	<li>Ask good questions</li>
-	<p>
-		Bad questions will result in bad answers. Good questions are those which are specific, concise, and practical.
-	</p>
+	<h3>Guidelines</h3>
+	<ul>
 
-	<li>See previous questions</li>
-	<p>
-		Has anyone else asked the same question? If so, read the answers to those questions first before seeking further assistance.
-	</p>
+		<li><strong>Google your question first</strong></li>
+		<ul>
+			<li>Becoming a great googler and getting your own answers is an essential skill to become a competent developer. Google is smarter than anyone, ask it first, and if you still don't understand, seek for assistance.</li>
+		</ul>
 
-</ul>
+		<li><strong>Ask good questions</strong></li>
+		<ul>
+			<li>Bad questions will result in bad answers. Good questions are those which are specific, concise, and practical.</li>
+		</ul>
 
-<br>
+		<li><strong>See previous questions</strong></li>
+		<ul>
+			<li>Has anyone else asked the same question? If so, read the answers to those questions first before seeking further assistance.</li>
+		</ul>
 
-<%= simple_form_for :comment, url: forum_comments_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
-	<%= f.input :title, required: true %>
-	<div data-no-turbolink>
-		<%= f.cktext_area :description, as: :text, input_html: {rows: 6}, ckeditor: {language: 'us'}, required: true %>
-	</div>
-	<%= f.input :lesson, as: :hidden, input_html: { value: params[:lesson]} %>
-	<%= f.input :forum_id, as: :hidden, input_html: { value: params[:forum_id]} %>
+	</ul>
 
 	<br>
-	<%= f.submit 'Submit Question', class: 'btn btn-primary' %>
-<% end %>
+
+	<%= simple_form_for :comment, url: forum_comments_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
+		<%= f.input :title, required: true %>
+		<div data-no-turbolink>
+			<%= f.cktext_area :description, as: :text, input_html: {rows: 6}, ckeditor: {language: 'us'}, required: true %>
+		</div>
+		<%= f.input :lesson, as: :hidden, input_html: { value: params[:lesson]} %>
+		<%= f.input :forum_id, as: :hidden, input_html: { value: params[:forum_id]} %>
+
+		<br>
+		<%= f.submit 'Submit Question', class: 'btn btn-primary' %>
+	<% end %>
+
+</div>
