--- a/app/views/command_line_lessons/lessons/lesson_1.html.erb
+++ b/app/views/command_line_lessons/lessons/lesson_1.html.erb
@@ -15,4 +15,4 @@
   <li>Paste a screenshot of your Codecademy screen to show that you have completed all of the lessons</li>
 </ul>
 
-<% @submissions = true %>
+<% @submission_form = true %>
