--- a/app/views/ideator_lessons/lessons/lesson_22.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_22.html.erb
@@ -21,4 +21,4 @@
   Submit your app down below by pasting a link to your GitHub below! Congratulations on your hard work!
 </p>
 
-<% @submissions = true %>
+<% @submission_form = true %>
