--- a/app/views/user_mailer/new_submission_reply.html.erb
+++ b/app/views/user_mailer/new_submission_reply.html.erb
@@ -7,7 +7,7 @@
     <p>
       You've got a new reply on one of your submissions!
     </p>
-  	<p>View it <%= link_to 'here!', submission_submission_comment_url(@forum, @post) %></p>
+  	<p>View it <%= link_to 'here!', submission_url(@submission) %></p>
 
     <p>
       Happy coding!
