--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -24,9 +24,9 @@
 
       <%= render 'lesson_nav_section' %>
 
-      <%= render partial: '/submission_comments/submission_for_lesson', locals: { name: "#{@course_name}", lesson: params[:id]} if @submissions == true %>
+      <%= render partial: '/submissions/for_lesson' if @submission_form == true %>
 
-      <%= render partial: '/comments/for_lesson', locals: { name: "#{@course_name}", lesson: params[:id]} %>
+      <%= render partial: '/questions/for_lesson' %>
 
       <%= render 'git_workflow_modal' %>
 
