--- a/app/views/static_pages/dashboard.html.erb
+++ b/app/views/static_pages/dashboard.html.erb
@@ -9,7 +9,7 @@
             <div class="panel-body">
               <ul class="unindented_ul">
                 <% @questions.each do |question| %>
-                  <li><%= link_to question.title, forum_comment_path(question.forum_id, question.id) %> by <%= User.find(question.user_id).name %></li>
+                  <li><%= link_to question.title, question_path(question.id) %> by <%= User.find(question.user_id).name %></li>
                 <% end %>
               </ul>
             </div>
@@ -24,7 +24,7 @@
             <div class="panel-body">
               <ul class="unindented_ul">
                 <% @submissions.each do |submission| %>
-                  <li><%= link_to submission.title, submission_submission_comment_path(submission.submission_id, submission.id) %> by <%= User.find(submission.user_id).name %></li>
+                  <li><%= link_to submission.title, submission_path(submission.id) %> by <%= User.find(submission.user_id).name %></li>
                 <% end %>
               </ul>
             </div>
