--- a/app/views/user_mailer/new_reply.html.erb
+++ b/app/views/user_mailer/new_reply.html.erb
@@ -2,7 +2,7 @@
 <p>
   You've got a new reply on one of your forum questions!
 </p>
-<p>View the reply <%= link_to 'here.', forum_comment_url(@forum, @post) %></p>
+<p>View the reply <%= link_to 'here.', question_url(@question.id) %></p>
 
 <p>
   Happy coding!
