--- a/app/views/ruby_lessons/lessons/lesson_3.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_3.html.erb
@@ -110,5 +110,7 @@ ruby foobar.rb
 </div>
 
 <p>
-  Good luck on this problem! After you have finished this problem, go over your code directly with your mentor to get an in-depth code review!
+  Good luck on this problem! After you have finished this problem, copy and paste the code in the submissions below!
 </p>
+
+<% @submission_form = true %>
