--- a/app/views/html_css_lessons/lessons/lesson_2.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_2.html.erb
@@ -20,8 +20,7 @@
 <ul>
   <li><strong>Don't worry about finishing Project 5</strong></li>
   <li>Finish Project 1 ~ 4</li>
-  <li>Upload screenshot of your completed Dash Assembly screen using <a href = "http://imgur.com/" target = "_blank">imgur</a></li>
-  <li>Post the link in below in the submissions section</span> so that we can see that you've completed the course</li>
+  <li>Upload screenshot of your completed Dash Assembly screen in the <%= link_to 'submission page.', new_submission_path(course_name: controller_name.classify, lesson_id: params[:id]) %></li>
   <li>Go to next lesson while you wait for our feedback :)</li>
 </ul>
 
