--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -8,8 +8,7 @@
 		    <div class="panel-body text-center">
 		      <div class="row">
 		        <div class="col-xs-12">
-		          <h5>Day <%= (DateTime.now.to_date - current_user.created_at.to_date).to_i %></h5>
-		          <h3 style="margin-bottom: 40px; text-decoration: underline;">Current Course in Progress</h3>
+		          <h5>In Progress</h5>
 
 		          <div class="row">
 		            <div class="col-sm-4 col-xs-12">
