--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -2,6 +2,7 @@
   border: none;
   border-top: 5px solid #ec6952 !important;
   box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 2px;
 }
 
 .prof_badge {
