--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -21,7 +21,7 @@
       </div>
 
       <div class="col-xs-12 col-sm-6">
-        <div class="panel panel-default">
+        <div class="panel panel-default" style="border-top: none;">
           <div class="panel-heading" style="background: #0F0F0F; color: white;">
               <h3 class="panel-title">Type your answer below:</h3>
           </div>
