--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -107,6 +107,8 @@ span.radio.inline {
   background: #fdfdfd;
   h3 {
     font-weight: 300;
+    font-size: 20px;
+    margin-top: 10px;
   }
 }
 
